[package]
name = "camera-intrinsic-calibration"
version = "0.5.5"
edition = "2024"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
description = "Camera Intrinsic Calibration"
homepage = "https://github.com/powei-lin/camera-intrinsic"
repository = "https://github.com/powei-lin/camera-intrinsic"
keywords = ["camera-intrinsic", "intrinsic", "fisheye"]
categories = ["data-structures", "science", "mathematics", "science::robotics"]
exclude = [
    "/.github/*",
    "*.ipynb",
    "scripts/*",
    "examples/*",
    "tests/*",
    "data/*",
    "docs/*",
]

[features]
rerun = ["dep:rerun"]
shiny = ["dep:clap", "dep:indicatif", "dep:env_logger"]

[dependencies]
aprilgrid = { git = "https://github.com/chalkydri/aprilgrid-rs.git", branch = "master" }
camera-intrinsic-model = { git = "https://github.com/chalkydri/camera-intrinsic-model-rs.git", branch = "main" }
chrono = "0.4.39"
clap = { version = "4.5.24", features = ["derive"], optional = true }
colorous = { version = "1.0.15", optional = true }
env_logger = { version = "0.11.6", optional = true }
faer = { version = "0.21.3", default-features = false, features = ["rayon"] }
glam = { version = "0.30.0", default-features = false, features = ["fast-math", "std"] }
glob = "0.3.2"
image = { version = "0.25.5", default-features = false, features = ["rayon"] }
indicatif = { version = "0.17.9", optional = true, features = ["rayon"] }
log = "0.4.22"
nalgebra = "0.33.2"
rand = "0.9.0"
rand_chacha = "0.9.0"
rayon = "1.10.0"
rerun = { version = "0.22.0", optional = true, default-features = false, features = ["sdk"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqpnp_simple = "0.1.5"
tiny-solver = "0.17.0"

[[bin]]
name = "ccrs"
path = "src/bin/camera_calibration.rs"
test = false
bench = false
required-features = ["pretty"]

[[example]]
name = "convert_model"
path = "examples/convert_model.rs"
required-features = ["pretty"]

[[example]]
name = "test_pnp"
